# vaillant-ebus

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.github/scripts/: build_release_zip.py
.github/workflows/: ci.yml  hacs.yml  release.yml  validate.yml
custom_components/vaillant_ebus/: binary_sensor.py  calendar.py  climate.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py
custom_components/vaillant_ebus/backend/: custom_defines.csv  mapping.py  models.py  tcp.py
custom_components/vaillant_eebus/: __init__.py  config_flow.py  coordinator.py  manifest.json  number.py  select.py  sensor.py
custom_components/vaillant_eebus/translations/: en.json
docs/: architecture.md  developer.md  faq.md  setup.md  troubleshooting.md
examples/: basic_dashboard.yaml
openspec/changes/archive/2026-07-18-phase-1-read-only/: design.md  proposal.md  tasks.md
openspec/changes/ebusd-tcp-backend/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-read-only/: design.md  proposal.md  tasks.md
openspec/changes/phase-2-write-support/: design.md  proposal.md
tests/: test_certificate.py  test_compressor_power.py  test_measurement.py  test_model.py  test_recorder.py  test_replay.py  test_replay_integration.py
tests/fixtures/: measurements.jsonl
tools/: capture.py  recorder.py  replay.py
vaillant/: certificate.py  client.py  const.py  discovery.py  measurement.py  model.py  ship.py  spine.py
(+22 files in other folders)
